# bbot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: benchmark.yml  cla.yml  distro_tests.yml  docs_updater.yml  tests.yml
bbot/: __init__.py  constants.py  defaults.yml
bbot/core/: modules.py
bbot/core/event/: base.py
bbot/core/helpers/: git.py  validators.py
bbot/core/helpers/depsinstaller/: installer.py
bbot/core/helpers/web/: client.py
bbot/models/: helpers.py  pydantic.py  sql.py
bbot/modules/: ajaxpro.py  apkpure.py  aspnet_bin_exposure.py  baddns.py  baddns_direct.py  baddns_zone.py  badsecrets.py  base.py  bypass403.py  censys_ip.py  dnstlsrpt.py  docker_pull.py  dotnetnuke.py  generic_ssrf.py  git.py  git_clone.py  gitdumper.py  github_org.py  github_workflows.py  graphql_introspection.py  host_header.py  hunt.py  iis_shortnames.py  kreuzberg.py  medusa.py  newsletters.py  ntlm.py  nuclei.py  oauth.py  paramminer_cookies.py  paramminer_getparams.py  postman_download.py  reflected_parameters.py  retirejs.py  shodan_enterprise.py  shodan_idb.py  smuggler.py  telerik.py  trufflehog.py  url_manipulation.py  (+1 more)
bbot/modules/deadly/: legba.py
bbot/modules/internal/: dnsresolve.py  excavate.py  unarchive.py
bbot/modules/lightfuzz/: lightfuzz.py
bbot/modules/lightfuzz/submodules/: cmdi.py  crypto.py  esi.py  path.py  serial.py  sqli.py  ssti.py  xss.py
bbot/modules/output/: asset_inventory.py  base.py  discord.py  http.py  kafka.py  mongo.py  nats.py  slack.py  stdout.py  teams.py  web_report.py
bbot/modules/templates/: bucket.py  sql.py  subdomain_enum.py  webhook.py
bbot/scanner/: manager.py  scanner.py  stats.py  target.py
bbot/scanner/preset/: args.py  preset.py
bbot/scripts/: benchmark_report.py  docs.py
bbot/test/: bbot_fixtures.py
bbot/test/test_step_1/: test_bbot_fastapi.py  test_cli.py  test_db_models.py  test_dns.py  test_events.py  test_helpers.py  test_manager_deduplication.py  test_manager_scope_accuracy.py  test_modules_basic.py  test_preset_seeds.py  test_presets.py  test_python_api.py  test_regexes.py  test_scan.py  test_scope.py  test_target.py  test_web.py
bbot/test/test_step_2/module_tests/: base.py  test_module_ajaxpro.py  test_module_aspnet_bin_exposure.py  test_module_baddns.py  test_module_baddns_zone.py  test_module_badsecrets.py  test_module_censys_ip.py  test_module_csv.py  test_module_discord.py  test_module_dnscommonsrv.py  test_module_docker_pull.py  test_module_dotnetnuke.py  test_module_elastic.py  test_module_excavate.py  test_module_generic_ssrf.py  test_module_gitdumper.py  test_module_github_workflows.py  test_module_gitlab_onprem.py  test_module_graphql_introspection.py  test_module_http.py  test_module_hunt.py  test_module_iis_shortnames.py  test_module_json.py  test_module_kreuzberg.py  test_module_lightfuzz.py  test_module_medusa.py  test_module_mongo.py  test_module_mysql.py  test_module_nuclei.py  test_module_oauth.py  test_module_portscan.py  test_module_postgres.py  test_module_postman_download.py  test_module_rabbitmq.py  test_module_retirejs.py  test_module_robots.py  test_module_shodan_enterprise.py  test_module_slack.py  test_module_splunk.py  test_module_stdout.py  (+6 more)
bbot/test/test_step_2/template_tests/: test_template_subdomain_enum.py
docs/: release_history.md  troubleshooting.md
docs/data/chord_graph/: entities.json  rels.json
docs/dev/: dev_environment.md  index.md  target.md  tests.md
docs/modules/: custom_yara_rules.md  list_of_modules.md
docs/scanning/: advanced.md  configuration.md  events.md  index.md  output.md  presets_list.md  tips_and_tricks.md
