[project]
name = "bbot"
dynamic = ["version"]
description = "OSINT automation for hackers."
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.10"
authors = [
    { name = "TheTechromancer" },
    { name = "Paul Mueller" },
]
keywords = ["python", "cli", "automation", "osint", "threat-intel", "intelligence", "neo4j", "scanner", "python-library", "hacking", "recursion", "pentesting", "recon", "command-line-tool", "bugbounty", "subdomains", "security-tools", "subdomain-scanner", "osint-framework", "attack-surface", "subdomain-enumeration", "osint-tool"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
]
dependencies = [
    "omegaconf>=2.3.0,<3",
    "psutil>=5.9.4,<8.0.0",
    "wordninja>=2.0.0,<3",
    "ansible-runner>=2.3.2,<3",
    "deepdiff>=8.0.0,<9",
    "xmltojson>=2.0.2,<3",
    "pycryptodome>=3.17,<4",
    "idna>=3.4,<4",
    "tabulate==0.8.10",
    "websockets>=14.0.0,<16.0.0",
    "pyjwt>=2.7.0,<3",
    "beautifulsoup4>=4.12.2,<5",
    "lxml>=4.9.2,<7.0.0",
    "dnspython>=2.7.0,<2.8.0",
    "cachetools>=5.3.2,<7.0.0",
    "socksio>=1.0.0,<2",
    "jinja2>=3.1.3,<4",
    "regex>=2024.4.16,<2027.0.0",
    "unidecode>=1.3.8,<2",
    "mmh3>=4.1,<6.0",
    "xxhash>=3.5.0,<4",
    "setproctitle>=1.3.3,<2",
    "yara-python>=4.5.1,<5",
    "pyzmq>=26.0.3,<28.0.0",
    "httpx>=0.28.1,<1",
    "puremagic>=1.28,<2",
    "pydantic>=2.9.2,<3",
    "radixtarget>=3.0.13,<4",
    "orjson>=3.10.12,<4",
    "ansible-core>=2.15.13,<3",
    "tldextract>=5.3.0,<6",
    "cloudcheck>=9.2.0,<10",
]

[project.urls]
Repository = "https://github.com/blacklanternsecurity/bbot"
Homepage = "https://github.com/blacklanternsecurity/bbot"
Documentation = "https://www.blacklanternsecurity.com/bbot/"
Discord = "https://discord.com/invite/PZqkgxu5SA"
"Docker Hub" = "https://hub.docker.com/r/blacklanternsecurity/bbot"

[project.scripts]
bbot = "bbot.cli:main"

[dependency-groups]
dev = [
    "urllib3>=2.0.2,<3",
    "werkzeug>=2.3.4,<4.0.0",
    "pytest-env>=0.8.2,<1.2.0",
    "pre-commit>=3.4,<5.0",
    "pytest-cov>=5,<8",
    "pytest-rerunfailures>=14,<17",
    "pytest-timeout>=2.3.1,<3",
    "pytest-httpserver>=1.0.11,<2",
    "pytest>=8.3.1,<9",
    "pytest-asyncio==1.2.0",
    "uvicorn>=0.32,<0.40",
    "fastapi>=0.115.5,<0.129.0",
    "pytest-httpx>=0.35",
    "pytest-benchmark>=4,<6",
    "ruff==0.14.14",
]
docs = [
    "mkdocs>=1.5.2,<2",
    "mkdocs-extra-sass-plugin>=0.1.0,<1",
    "mkdocs-material>=9.2.5,<10",
    "mkdocs-material-extensions>=1.1.1,<2",
    "mkdocstrings>=0.22,<0.31",
    "mkdocstrings-python>=2.0.0,<3",
    "griffe>=1,<2",
    "livereload>=2.6.3,<3",
    "mike>=2.1.3,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "bbot/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["bbot"]

[tool.pytest.ini_options]
env = [
    "BBOT_TESTING = True",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = "--benchmark-skip"

# Benchmark configuration for pytest-benchmark
[tool.pytest-benchmark]
group_by = "group"
sort = "mean"
warmup = true
warmup_iterations = 3
disable_gc = true
min_rounds = 5

[tool.codespell]
ignore-words-list = "bu,cna,couldn,dialin,nd,ned,thirdparty"
skip = "./docs/javascripts/vega*.js,./bbot/wordlists/*"

[tool.ruff]
line-length = 119
format.exclude = ["bbot/test/test_step_1/test_manager_*"]
lint.select = ["E", "F"]
lint.ignore = ["E402", "E711", "E713", "E721", "E741", "F403", "F405", "E501"]
